fixed text wrapping issue

--- a/src/common/components/ArticleDetails.scss
+++ b/src/common/components/ArticleDetails.scss
@@ -104,7 +104,6 @@
 		margin-right: 5px;
 	}
 	.article-details_d2vnmv > .small-title > .title-link {
-		flex: 0 0 auto;
 		font-size: 16px;
 		text-decoration: none;
 		font-weight: bold;
